# tgmon

./: .gitignore  README.md  pyproject.toml
src/tgmon/: __init__.py  __main__.py
src/tgmon/cli/: __init__.py  account.py  aggregator.py  main.py  run.py  watch.py  web.py
src/tgmon/core/: __init__.py  config.py  database.py  models.py
src/tgmon/telegram/: __init__.py  client.py  formatter.py  monitor.py
src/tgmon/utils/: __init__.py  rate_limiter.py
src/tgmon/web/: __init__.py  async_bridge.py  monitor_manager.py
src/tgmon/web/routes/: __init__.py  accounts.py  aggregator.py  monitors.py  watches.py
src/tgmon/web/templates/: aggregator.html  base.html  index.html  monitors.html
src/tgmon/web/templates/accounts/: add.html  list.html  login.html
src/tgmon/web/templates/watches/: add.html  edit.html  list.html
